--- a/Boston-Housing-master/requirements.txt
+++ b/Boston-Housing-master/requirements.txt
@@ -1,6 +1,7 @@
-joblib
-numpy
-pandas
-Flask
-scikit-learn
-pylint
+Flask==2.1.2
+joblib==1.1.0
+numpy==1.22.4
+pandas==1.4.2
+pylint==2.14.1
+scikit-learn==1.1.1
+
